--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,7 @@
             justify-content: center;
             flex-direction: column;
         }
-
+        
         #uploader {
             -webkit-appearance: none;
             width: 50%;
@@ -24,52 +25,54 @@
         }
     </style>
 </head>
+
 <body>
     <progress id="uploader" value="0" max="100">0%</progress>
     <input type="file" value="upload" id="fileButton">
     <h1 id="message"></h1>
-    
-<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCKawnefDV0gMwaZzBN919uYAxG1KJxO4Y",
-    authDomain: "medicapp-8b49d.firebaseapp.com",
-    databaseURL: "https://medicapp-8b49d.firebaseio.com",
-    projectId: "medicapp-8b49d",
-    storageBucket: "medicapp-8b49d.appspot.com",
-    messagingSenderId: "637091621762"
-  };
-  firebase.initializeApp(config);
 
-  var uploader = document.getElementById('uploader');
-  var fileButton = document.getElementById('fileButton');
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "KEY",
+            authDomain: "APPID.firebaseapp.com",
+            databaseURL: "https://APPID.firebaseio.com",
+            projectId: "APPID",
+            storageBucket: "APPID.appspot.com",
+            messagingSenderId: "SENDERID"
+        };
+        firebase.initializeApp(config);
 
-  // Obtener cuando se modifique un archivo
-  fileButton.addEventListener('change', function(event){
-      // Obtener el archivo 
-      var file = event.target.files[0];
-      // Crear regerencia al storage
-      var refStorage = firebase.storage().ref('my_photos/' + file.name);
-      // Subir el archivo
-      var task = refStorage.put(file);
-      // Actualizar barra de progreso
-      task.on('state_changed',
-        function progress(snapshot){
-            var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-            uploader.value = percentage;
-        },
-        function error(err) { },
-        function complete() { }
-      );
+        var uploader = document.getElementById('uploader');
+        var fileButton = document.getElementById('fileButton');
+
+        // Obtener cuando se modifique un archivo
+        fileButton.addEventListener('change', function(event) {
+            // Obtener el archivo 
+            var file = event.target.files[0];
+            // Crear regerencia al storage
+            var refStorage = firebase.storage().ref('my_photos/' + file.name);
+            // Subir el archivo
+            var task = refStorage.put(file);
+            // Actualizar barra de progreso
+            task.on('state_changed',
+                function progress(snapshot) {
+                    var percentage = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                    uploader.value = percentage;
+                },
+                function error(err) {},
+                function complete() {}
+            );
 
 
-  });
+        });
 
-  var message = document.getElementById('message');
-  var dbRef = firebase.database().ref().child('text');
+        var message = document.getElementById('message');
+        var dbRef = firebase.database().ref().child('text');
 
-  dbRef.on('value', snap => message.innerText =snap.val())
-</script>
+        dbRef.on('value', snap => message.innerText = snap.val())
+    </script>
 </body>
+
 </html>
